--- a/results.html
+++ b/results.html
@@ -5,11 +5,11 @@
 </head>
 
 <body>
-
 <div id="topbar">Pop Quiz!</div>
-<p>To take part, start the quiz</p>
-<a href="q1.html"><button>Start quiz</button></a>
 
+<div id="finalScore"></div>
+
+<a href="q1.html"><button>Play again</button></a>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script type="text/javascript" src="script.js"></script>
